# first-responder

./: .gitignore  README.md  docker-compose.yml  idea-log.md  kind-config.yaml  main.py  pyproject.toml
application/: README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: admin.py  auth.py  deps.py  endpoints.py  routes.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: db.py  schemas.py  user.py
backend/app/routers/: admin.py  auth.py  kubernetes.py
backend/app/services/: auth.py  cache.py  diagnostics.py  k8s.py  rbac.py
backend/app/tests/: test_api_contract.py  test_diagnostics.py  test_rbac.py
backend/namespace_observatory_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_cache.py  test_diagnostics.py  test_import.py  test_k8s.py  test_rbac_filter.py
docs/: add-dashboard-card.md  adding-dashboard-cards.md  architecture.md  quickstart.md  rbac.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
observer/observer_mcp/: .gitignore  README.md  pyproject.toml
observer/observer_mcp/src/observer_mcp/: __init__.py  config.py
observer/observer_mcp/src/observer_mcp/clients/: __init__.py  kubernetes.py  prometheus.py
observer/observer_mcp/src/observer_mcp/models/: __init__.py  kubernetes.py  metrics.py  responses.py
observer/observer_mcp/src/observer_mcp/tools/: __init__.py  analysis.py  base.py  discovery.py  health.py  metrics.py
(+111 files in other folders)
