[project]
name = "namespace-observatory-backend"
version = "0.1.0"
description = "Read-only Kubernetes monitoring API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "sqlmodel>=0.0.22",
  "kubernetes>=31.0.0",
  "httpx>=0.27.2",
  "tenacity>=9.0.0",
  "pydantic-settings>=2.5.2",
  "email-validator>=2.2.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.2", "pytest-asyncio>=0.24.0", "ruff>=0.6.9", "mypy>=1.11.2"]

[tool.pytest.ini_options]
pythonpath = ["app"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
