[project]
name = "observer-mcp"
version = "0.1.0"
description = "MCP server tooling for Kubernetes cluster observability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kubernetes>=31.0.0",
    "prometheus-api-client>=0.5.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-dateutil>=2.9.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observer_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
